2018-05-24    <cerebrum@gagarin.uit.no>

	* process_systemx.py (Build._process_sysx): This script will now also send out emails when reopening old accounts

2018-05-03    <cerebrum@gagarin.uit.no>

	* export_safecom.py (safecom_export.load_cbdata): Need to collect all accounts, not only primary
	(safecom_export.get_safecom_mode): The old function which calcualted wether an account should be pay or track, did this based on person information.
	This will fail for persons with more than 1 account and where the accounts should end up in different file (track/pay). the new function calculates
	the pay/track status based on person info AND account info and will yield a correct status wether a person has 1 account or more.

2018-04-24  Karen   <cerebrum@gagarin.uit.no>

    * populate_fronter_groups.py: Minor tidy up. Removed reference to make_fs() as it is not used.

2018-04-18    <cerebrum@gagarin.uit.no>

	* process_uit_email.py (calculate_uit_emails): Rewrote how to
	check for timelonnet. the previous check did not work as intended
	if a person had more than 1 affiliation to an ou where one of the affiliations had timelonnet status

2018-04-17    <cerebrum@gagarin.uit.no>

	* process_uit_email.py (calculate_uit_emails): Rewrote how we
	decide who gets cnaddr email address. The new solution only
	collects valid/current person affiliation and uses that as its
	basis on who gets what. the old solution also collected expired
	person affiliatiosn which didnt scale all that well.

2018-04-16    <cerebrum@gagarin.uit.no>

	* account_affiliation_cleaner.py (clean_acc_affs): Script changed to NOT delete the last account_type for an account. Even closed accounts will
	have at least 1 account_type, even if it is no longer valid. this was done because process_students was unable to activate an old account
	if said account had lost all its account_types.

2018-04-05  Karen   <cerebrum@gagarin.uit.no>

    * export_cristin.py: Commented out unnecessary prints.
